--- a/templates/crop_details.html
+++ b/templates/crop_details.html
@@ -400,29 +400,8 @@
               class="mt-2 mb-2 relative flex items-center space-x-4 text-black group cursor-pointer"
             >
               <a
-                href="{% url 'insights' %}"
-                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200"
-                ><div class="flex-shrink-0">
-                  <img
-                    src="{% static 'images/chart-up.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  />
-                </div>
-                <span
-                  class="absolute left-4 opacity-0 group-hover:opacity-100 transition-all"
-                >
-                  Insight
-                </span>
-              </a>
-            </li>
-            <li
-              class="mt-2 mb-2 relative flex items-center space-x-4 text-black group cursor-pointer"
-            >
-              <a
                 href="{% url 'crop_details' %}"
-                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200 {% if request.resolver_match.url_name == 'crop_details' %} bg-gray-200 text-gray-800 font-semibold {% endif %}"
+                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200"
                 ><div class="flex-shrink-0">
                   <img
                     src="{% static 'images/info.png' %}"
@@ -442,29 +421,8 @@
               class="mt-2 mb-2 relative flex items-center space-x-4 text-black group cursor-pointer"
             >
               <a
-                href="{% url 'logs' %}"
-                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200"
-                ><div class="flex-shrink-0">
-                  <img
-                    src="{% static 'images/list.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  />
-                </div>
-                <span
-                  class="absolute left-4 opacity-0 group-hover:opacity-100 transition-all"
-                >
-                  Logs
-                </span></a
-              >
-            </li>
-            <li
-              class="mt-2 mb-2 relative flex items-center space-x-4 text-black group cursor-pointer"
-            >
-              <a
                 href="{% url 'reports' %}"
-                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200"
+                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] space-x-2 rounded hover:bg-gray-200 "
                 ><div class="flex-shrink-0">
                   <img
                     src="{% static 'images/bar-chart.png' %}"
@@ -484,7 +442,7 @@
             >
               <a
                 href="{% url 'dashboard_settings' %}"
-                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] hover:bg-gray-200 rounded space-x-2 active-link"
+                class="ml-[-6px] px-2 py-2 flex items-center w-full min-w-[2.2rem] hover:bg-gray-200 rounded space-x-2 active-link  {% if request.resolver_match.url_name == 'dashboard_settings' %} bg-gray-200 text-gray-800 font-semibold {% endif %}"
                 ><div class="flex-shrink-0">
                   <img
                     src="{% static 'images/settings.png' %}"
