--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>{% block title %}My Website{% endblock %}</title>
     <!-- Add your CSS links here -->
     <link
@@ -75,6 +75,7 @@
     </style>
     {% block styles %}
     <!-- <link rel="stylesheet" href="{% static 'css/index.css' %}" /> -->
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}" />
     {% endblock %}
   </head>
   <body>
@@ -178,5 +179,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="{% static 'js/responsive.js' %}"></script>
   </body>
 </html>
